# helper

./: CMakeLists.txt  Helper.pro
include/Helper/: FixedPoint.h  ThreadPool.h
include/Helper/Platform/: compiler.h  os.h
include/Helper/Platform/Cpu/: cpu.h  intrinsics.h  math.h  rounding.h  simd.h  simd_condition.h  simd_int.h
include/Helper/Platform/Cpu/emulated/: math_emulated.h  rounding_emulated.h
include/Helper/Platform/Cpu/x86/: math_x86.h  rounding_x86.h  simd_x86.h  x86.h
include/Helper/Platform/Cpu/x86/avx/: simd_avx.h  simd_float_avx.h  simd_int128_avx.h  simd_int16_avx.h  simd_int32_avx.h  simd_int64_avx.h  simd_int8_avx.h  simd_int_avx.h  simd_uint16_avx.h  simd_uint32_avx.h  simd_uint64_avx.h  simd_uint8_avx.h
include/Helper/Platform/Cpu/x86/sse/: simd_float_sse.h  simd_int16_sse.h  simd_int32_sse.h  simd_int64_sse.h  simd_int8_sse.h  simd_int_sse.h  simd_sse.h  simd_uint16_sse.h  simd_uint32_sse.h  simd_uint64_sse.h  simd_uint8_sse.h
src/: ThreadPool.cpp
